updated jupyter file

--- a/Assignment2_supervised_learning_flow.ipynb
+++ b/Assignment2_supervised_learning_flow.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# stundent details example: John S. 9812\n",
-    "#                       student details 1: Baler y 0222\n",
+    "#                       student details 1: Barel y 0222\n",
     "# (if exists)           student details 2: Eden C 4848\n",
     "# (if exists)           student details 3: \n",
     "# (if exists&premitted) student details 4: "
